// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`location-management/src/components/LocationUnitList works correctly: first row containing ona office loc details 1`] = `
<td
  class="ant-table-cell"
>
  Ona Office Sub Location
</td>
`;

exports[`location-management/src/components/LocationUnitList works correctly: first row containing ona office loc details 2`] = `
<td
  class="ant-table-cell"
>
  Root FHIR Location
</td>
`;

exports[`location-management/src/components/LocationUnitList works correctly: first row containing ona office loc details 3`] = `
<td
  class="ant-table-cell"
>
  Jurisdiction
</td>
`;

exports[`location-management/src/components/LocationUnitList works correctly: first row containing ona office loc details 4`] = `
<td
  class="ant-table-cell"
>
  active
</td>
`;

exports[`location-management/src/components/LocationUnitList works correctly: first row containing ona office loc details 5`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/admin/location/unit/edit/303"
  >
    <button
      class="ant-btn css-dev-only-do-not-override-12jzuas ant-btn-link m-0 p-1"
      type="button"
    >
      <span>
        Edit
      </span>
    </button>
  </a>
  <div
    class="ant-divider css-dev-only-do-not-override-12jzuas ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 1`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          Location id
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          303
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 2`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          identifier
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          93bc9c3d-6321-41b0-9b93-1275d7114e22
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 3`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          Name
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          Ona Office Sub Location
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 4`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          alias
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          ona office
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 5`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          Status
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          active
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 6`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          Physical type
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          Jurisdiction
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: key value 7`] = `
<div
  class="pb-3"
  data-testid="single-key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-k7429z"
        >
          Description
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-k7429z"
        >
          The Sub location
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`location-management/src/components/LocationUnitList works correctly: user defined root location 1`] = `
<span
  title="Ona Office Sub Location"
>
  Ona Office Sub Location
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expand 1`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Ona Office Sub Location"
  >
    Ona Office Sub Location
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expand 2`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Level 0"
  >
    Level 0
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expand 3`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Arundel mobile clinic"
  >
    Arundel mobile clinic
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expand 4`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Part Of Sub Location"
  >
    Part Of Sub Location
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 1`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Ona Office Sub Location"
  >
    Ona Office Sub Location
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 2`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Level 0"
  >
    Level 0
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 3`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Arundel mobile clinic"
  >
    Arundel mobile clinic
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 4`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Part Of Sub Location"
  >
    Part Of Sub Location
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 5`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Nairobii"
  >
    Nairobii
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 6`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Sub Loc"
  >
    Test Sub Loc
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 7`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Loc 113"
  >
    Test Loc 113
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 8`] = `
<span
  class="ant-tree-title"
>
  <span
    title="Test Loc 1145"
  >
    Test Loc 1145
  </span>
</span>
`;

exports[`location-management/src/components/LocationUnitList works correctly: visible nodes on expanding part of sub location 9`] = `
<span
  class="ant-tree-title"
>
  <span
    title="MOH HQ 2"
  >
    MOH HQ 2
  </span>
</span>
`;
